--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div id="content">
     </div>
+    <div>
+      <p><a href="https://github.com/sanspace/async-test">source</a></p>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
